# ELECTRON-AI

./: .env.example  README.md
electron_ai/: __init__.py  api.py  cli.py  main.py  pyproject.toml
electron_ai/agents/: __init__.py  analyzer.py  coder.py  deployer.py
electron_ai/notifications/: __init__.py  n8n.py
electron_ai/storage/: __init__.py  firebase.py
