[project]
name = "electron-ai"
version = "0.1.0"
description = "Système d'Intelligence Artificielle multi-agents pour ELECTRON - Web Design & Marketing Digital"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "firebase-admin>=6.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.0.0",
    "gitpython>=3.1.0",
    "pygithub>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6.0",
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["electron_ai"]

[tool.ruff]
line-length = 100

[tool.uv]
managed = true
